# Proof_of_Worth

./: .env.example  .gitignore  Anchor.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
app/: next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/create/: page.tsx
app/src/app/leaderboard/: page.tsx
app/src/app/topic/[id]/: page.tsx
app/src/components/: Navbar.tsx  StatsBar.tsx  TopicCard.tsx  WalletProvider.tsx
app/src/hooks/: useWorthHub.ts
app/src/lib/: utils.ts
programs/worth_hub/: Cargo.toml
programs/worth_hub/src/: errors.rs  lib.rs  state.rs
programs/worth_hub/src/instructions/: commit.rs  create_topic.rs  finalize.rs  mod.rs  reveal.rs  settle.rs
scripts/: run-agents.ts  run-oracle.ts
sdk/src/: Oracle.ts  WorkerAgent.ts  client.ts  db.ts  index.ts  protocol.ts
tests/: worth-hub.ts
