[package]
name = "worth-hub"
version = "0.1.0"
description = "PoWorth - Commit-Reveal prediction market on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "worth_hub"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
